2003-11-13 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Adapted includes order to cope with the non-recursive
	system in openh323 cvs.
	
	* src/common.h, src/config.cpp, src/druid.cpp, src/endpoint.cpp,
	src/gnomemeeting.cpp, src/main_window.cpp, src/pref_window.cpp,
	src/sound_handling.cpp, src/sound_handling.h, src/videograbber.cpp,
	src/videograbber.h: Converted the new and definitive plugins system
	developed by Julien Puydt and Craig Southeren.
	
2003-11-12 Damien Sandras  <dsandras@seconix.com>

	* gnomemeeting.schemas.in.in, src/endpoint.cpp, src/endpoint.h,
	src/gatekeeper.cpp, src/gatekeeper.h, src/pref_window.cpp, 
	configure.in: Reverted previous TTL change.
	
2003-11-12 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Fixed it a last time this year!
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/gnomemeeting.cpp: Fixed reported message again.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Fixed call end reason message. Make sure
	that the missed calls (busy, do not disturb, not answered) are
	put in the Unanswered Calls part of the calls history. Some
	of them were missed.
	
	* src/gnomemeeting.cpp: Use correct call end reason when refusing
	a call. Some rejects were seen as "remote user did not accept the
	call" even if the remote user was the caller.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* src/druid.cpp: Fixed wrong total page number.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with CVS news.

	* configure.in, gnomemeeting.schemas.in.in, src/endpoint.cpp,
	src/endpoint.h, src/gatekeeper.cpp, src/gatekeeper.h,
	src/pref_window.cpp: Added support to set the gatekeeper registration
	TTL.
	
	* src/main_window.cpp: Do not display dialed DTMF's in the URL
	bar during calls.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with CVS news.
	
2003-11-11 Damien Sandras  <dsandras@seconix.com>
