@@ -1,3 +1,12 @@
+2003-11-16 Damien Sandras  <dsandras@seconix.com>
+
+	* lib/dialog.c: Added call to gtk_window_set_transient_for.
+
+	* src/callbacks.cpp, src/callbacks.h, src/config.cpp,
+	src/connection.cpp, src/endpoint.cpp, src/endpoint.h,
+	src/gnomemeeting.cpp, src/pref_window.cpp, src/pref_window.h,
+	src/videograbber.cpp, src/videograbber.h: Improved devices handling.
+	
 2003-11-13 Damien Sandras  <dsandras@seconix.com>
 
 	* configure.in: Adapted includes order to cope with the non-recursive
